<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tbImporto"
        android:id="@+id/importoTextView"
        android:layout_gravity="right"
        android:labelFor="@+id/importoEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/importoEditText"
        android:digits="0123456789"
        android:maxLength="6">
        <requestFocus />
    </EditText>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/amountDisplayTextView"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/custom_percentuale_iva"
        android:id="@+id/customPercentualeTextView"
        android:layout_gravity="center_vertical|right" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivaCustomSeekBar"
        android:indeterminate="false"
        android:max="30"
        android:progress="10"
        android:layout_gravity="fill_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percentualeLinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/venidue_percento"
            android:id="@+id/percentuale22TextView"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dieci_percento"
            android:id="@+id/percentualeCustomTextView"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/iva"
        android:id="@+id/ivaTextView"
        android:layout_gravity="center_vertical|right" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivaLinearLayout"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/iva22TextView"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:background="@android:color/holo_orange_light"
            android:layout_marginRight="@dimen/textview_margin" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ivaCustomTextView"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/netto"
        android:id="@+id/valoreNettoTextView"
        android:layout_gravity="center_vertical|right" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/valoreNettoLayout"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/valoreNetto22TextView"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:background="@android:color/holo_orange_light"
            android:layout_marginRight="@dimen/textview_margin" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/valoreNettoCustomTextView"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding" />
    </LinearLayout>

    <Space />

</GridLayout>
